public static class AnimatorStrings
{
    public static readonly string MeleeString = "Melee";
    public static readonly string MagicString = "Magic";
    public static readonly string DeathString = "Death";
    public static readonly string GetHitString = "GetHit";
    public static readonly string PickUpString = "PickUp";
}
